--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 		<link rel="icon" type="image/png" href="favicon.ico">
         <link rel="stylesheet" href="css/reset.css">
-        <link rel="stylesheet" href="css/mainalt.css">
+        <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="fancybox/jquery.fancybox-1.3.4.css" type="text/css" media="screen" />
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
         <style type="text/css">
